# cpp-secure-allocator

./: .gitignore  CMakeLists.txt  README.md
include/: basic_allocator.hpp  utils.hpp  windows_secure_allocator_mk1.hpp  windows_secure_allocator_mk2.hpp
src/: sample.cpp
